--- a/tailwind/tailwind.css
+++ b/tailwind/tailwind.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    @font-face {
+        font-family: BnazaninBold;
+        src: url(../assets/fonts/B-Nazanin-Bold/B\ Nazanin\ Bold_0.ttf);
+        src: url(../assets/fonts/B-Nazanin-Bold/BNazaninBold.woff);
+        src: url(../assets/fonts/B-Nazanin-Bold/BNazaninBold.woff2);
+    }
+
+    @font-face {
+        font-family: Gandom;
+        src: url(../assets/fonts/Gandom/Gandom.ttf);
+        src: url(../assets/fonts/Gandom/Gandom.woff);
+        src: url(../assets/fonts/Gandom/Gandom.woff2);
+    }
+}
