--- a/css/main.css
+++ b/css/main.css
@@ -645,6 +645,10 @@ video {
   left: 0px;
 }
 
+.left-10 {
+  left: 2.5rem;
+}
+
 .right-0 {
   right: 0px;
 }
@@ -653,36 +657,32 @@ video {
   top: 0px;
 }
 
-.left-4 {
-  left: 1rem;
+.top-6 {
+  top: 1.5rem;
 }
 
 .top-7 {
   top: 1.75rem;
 }
 
-.top-3 {
-  top: 0.75rem;
+.top-8 {
+  top: 2rem;
 }
 
-.top-4 {
-  top: 1rem;
+.top-10 {
+  top: 2.5rem;
 }
 
-.top-5 {
-  top: 1.25rem;
+.left-12 {
+  left: 3rem;
 }
 
-.left-7 {
-  left: 1.75rem;
+.left-11 {
+  left: 2.75rem;
 }
 
-.left-10 {
-  left: 2.5rem;
-}
-
-.top-6 {
-  top: 1.5rem;
+.top-9 {
+  top: 2.25rem;
 }
 
 .z-50 {
@@ -692,6 +692,10 @@ video {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.mb-14 {
+  margin-bottom: 3.5rem;
 }
 
 .mb-2 {
@@ -710,52 +714,24 @@ video {
   margin-bottom: 1.25rem;
 }
 
-.mb-6 {
-  margin-bottom: 1.5rem;
-}
-
-.mb-10 {
-  margin-bottom: 2.5rem;
-}
-
-.mb-11 {
-  margin-bottom: 2.75rem;
-}
-
-.mb-12 {
-  margin-bottom: 3rem;
-}
-
-.mb-14 {
-  margin-bottom: 3.5rem;
-}
-
-.mb-7 {
-  margin-bottom: 1.75rem;
-}
-
 .mt-6 {
   margin-top: 1.5rem;
 }
 
-.ms-5 {
-  margin-inline-start: 1.25rem;
+.mb-1 {
+  margin-bottom: 0.25rem;
 }
 
-.me-5 {
-  margin-inline-end: 1.25rem;
+.mt-4 {
+  margin-top: 1rem;
 }
 
-.me-10 {
-  margin-inline-end: 2.5rem;
+.mb-6 {
+  margin-bottom: 1.5rem;
 }
 
-.ms-10 {
-  margin-inline-start: 2.5rem;
-}
-
-.ms-20 {
-  margin-inline-start: 5rem;
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .block {
@@ -768,6 +744,10 @@ video {
 
 .inline-flex {
   display: inline-flex;
+}
+
+.table {
+  display: table;
 }
 
 .hidden {
@@ -790,10 +770,6 @@ video {
   height: 100vh;
 }
 
-.h-14 {
-  height: 3.5rem;
-}
-
 .w-8 {
   width: 2rem;
 }
@@ -810,49 +786,80 @@ video {
   width: 100%;
 }
 
-.w-\[50\%\] {
-  width: 50%;
+.w-1 {
+  width: 0.25rem;
 }
 
-.w-fit {
-  width: -moz-fit-content;
-  width: fit-content;
+.w-\[100\] {
+  width: 100;
+}
+
+.w-\[300px\] {
+  width: 300px;
+}
+
+.w-\[3050px\] {
+  width: 3050px;
+}
+
+.w-\[350px\] {
+  width: 350px;
+}
+
+.w-\[90\%\] {
+  width: 90%;
+}
+
+.w-\[3580px\] {
+  width: 3580px;
+}
+
+.w-\[380px\] {
+  width: 380px;
 }
 
 .w-\[\] {
   width: ;
 }
 
-.w-\[10\%\] {
-  width: 10%;
+.w-\[50\] {
+  width: 50;
 }
 
-.w-\[20\] {
-  width: 20;
+.w-\[50\%\] {
+  width: 50%;
 }
 
-.w-\[2\] {
-  width: 2;
+.w-\[80\%\] {
+  width: 80%;
 }
 
-.w-\[30\%\] {
-  width: 30%;
+.w-\[\%\] {
+  width: %;
 }
 
-.w-\[20\%\] {
-  width: 20%;
+.w-\[85\%\] {
+  width: 85%;
 }
 
-.w-\[25\%\] {
-  width: 25%;
+.w-\[390px\] {
+  width: 390px;
 }
 
-.w-\[23\%\] {
-  width: 23%;
+.w-\[370px\] {
+  width: 370px;
 }
 
-.w-14 {
-  width: 3.5rem;
+.w-\[full\] {
+  width: full;
+}
+
+.w-\[400\] {
+  width: 400;
+}
+
+.w-\[500px\] {
+  width: 500px;
 }
 
 .max-w-7xl {
@@ -867,8 +874,36 @@ video {
   flex-shrink: 0;
 }
 
+.table-auto {
+  table-layout: auto;
+}
+
+.border-collapse {
+  border-collapse: collapse;
+}
+
+.flex-row {
+  flex-direction: row;
+}
+
+.flex-row-reverse {
+  flex-direction: row-reverse;
+}
+
 .flex-col {
   flex-direction: column;
+}
+
+.flex-col-reverse {
+  flex-direction: column-reverse;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.flex-nowrap {
+  flex-wrap: nowrap;
 }
 
 .items-center {
@@ -883,12 +918,32 @@ video {
   justify-content: space-between;
 }
 
+.justify-around {
+  justify-content: space-around;
+}
+
 .gap-10 {
   gap: 2.5rem;
 }
 
 .gap-5 {
   gap: 1.25rem;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
+.gap-7 {
+  gap: 1.75rem;
+}
+
+.gap-6 {
+  gap: 1.5rem;
+}
+
+.gap-8 {
+  gap: 2rem;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -915,12 +970,36 @@ video {
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 
+.space-x-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(2rem * var(--tw-space-x-reverse));
+  margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-y-0 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0px * var(--tw-space-y-reverse));
+}
+
 .space-x-reverse > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 1;
 }
 
+.overflow-auto {
+  overflow: auto;
+}
+
 .overflow-hidden {
   overflow: hidden;
+}
+
+.overflow-x-auto {
+  overflow-x: auto;
+}
+
+.scroll-smooth {
+  scroll-behavior: smooth;
 }
 
 .whitespace-nowrap {
@@ -939,8 +1018,8 @@ video {
   border-radius: 3px;
 }
 
-.rounded-lg {
-  border-radius: 0.5rem;
+.rounded-full {
+  border-radius: 9999px;
 }
 
 .rounded-md {
@@ -951,17 +1030,31 @@ video {
   border-radius: 0.125rem;
 }
 
-.rounded-full {
-  border-radius: 9999px;
-}
-
 .border {
   border-width: 1px;
+}
+
+.border-\[1px\] {
+  border-width: 1px;
+}
+
+.border-none {
+  border-style: none;
 }
 
 .border-\[\#f13a11\] {
   --tw-border-opacity: 1;
   border-color: rgb(241 58 17 / var(--tw-border-opacity));
+}
+
+.border-gray-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(55 65 81 / var(--tw-border-opacity));
+}
+
+.border-\[\#212122\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(33 33 34 / var(--tw-border-opacity));
 }
 
 .bg-\[\#171819\] {
@@ -978,14 +1071,34 @@ video {
   background-color: rgb(241 58 18 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#f13a11\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 58 17 / var(--tw-bg-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#f13a11\] {
+.bg-gray-900 {
   --tw-bg-opacity: 1;
-  background-color: rgb(241 58 17 / var(--tw-bg-opacity));
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
+.bg-blue-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
 }
 
 .object-contain {
@@ -1006,24 +1119,12 @@ video {
   padding: 5rem;
 }
 
-.p-4 {
-  padding: 1rem;
-}
-
 .p-3 {
   padding: 0.75rem;
 }
 
-.p-1 {
-  padding: 0.25rem;
-}
-
-.p-6 {
-  padding: 1.5rem;
-}
-
-.p-5 {
-  padding: 1.25rem;
+.p-4 {
+  padding: 1rem;
 }
 
 .px-2 {
@@ -1071,6 +1172,56 @@ video {
   padding-bottom: 2rem;
 }
 
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.px-28 {
+  padding-left: 7rem;
+  padding-right: 7rem;
+}
+
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
+.py-28 {
+  padding-top: 7rem;
+  padding-bottom: 7rem;
+}
+
+.px-20 {
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+
+.px-52 {
+  padding-left: 13rem;
+  padding-right: 13rem;
+}
+
+.px-60 {
+  padding-left: 15rem;
+  padding-right: 15rem;
+}
+
+.py-24 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
+.px-64 {
+  padding-left: 16rem;
+  padding-right: 16rem;
+}
+
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
 .pb-3 {
   padding-bottom: 0.75rem;
 }
@@ -1091,22 +1242,6 @@ video {
   padding-top: 1.5rem;
 }
 
-.pb-4 {
-  padding-bottom: 1rem;
-}
-
-.pt-4 {
-  padding-top: 1rem;
-}
-
-.pl-3 {
-  padding-left: 0.75rem;
-}
-
-.text-left {
-  text-align: left;
-}
-
 .text-center {
   text-align: center;
 }
@@ -1121,6 +1256,10 @@ video {
 
 .font-\[Gandom\] {
   font-family: Gandom;
+}
+
+.font-\[bold\] {
+  font-family: bold;
 }
 
 .text-3xl {
@@ -1161,8 +1300,26 @@ video {
   line-height: 1.75rem;
 }
 
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-\[44px\] {
+  font-size: 44px;
+}
+
 .font-bold {
   font-weight: 700;
+}
+
+.font-light {
+  font-weight: 300;
 }
 
 .text-\[\#25262A\] {
@@ -1190,25 +1347,23 @@ video {
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
-.text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
-}
-
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-\[5xl\] {
+  color: 5xl;
+}
+
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
 .shadow-custom {
   --tw-shadow: 6px 0 38px rgba(20, 20, 20, 0.10);
   --tw-shadow-colored: 6px 0 38px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1263,6 +1418,14 @@ video {
     margin-right: 1.5rem;
   }
 
+  .sm\:w-\[70\%\] {
+    width: 70%;
+  }
+
+  .sm\:w-\[350px\] {
+    width: 350px;
+  }
+
   .sm\:items-stretch {
     align-items: stretch;
   }
@@ -1282,6 +1445,10 @@ video {
     height: fit-content;
   }
 
+  .md\:w-\[23\%\] {
+    width: 23%;
+  }
+
   .md\:w-\[40\%\] {
     width: 40%;
   }
@@ -1290,16 +1457,28 @@ video {
     width: unset;
   }
 
-  .md\:w-\[23\%\] {
-    width: 23%;
+  .md\:w-\[\] {
+    width: ;
   }
 
-  .md\:w-\[25\%\] {
-    width: 25%;
+  .md\:w-\[300\] {
+    width: 300;
+  }
+
+  .md\:w-\[300px\] {
+    width: 300px;
+  }
+
+  .md\:w-\[350px\] {
+    width: 350px;
   }
 
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:flex-wrap {
+    flex-wrap: wrap;
   }
 
   .md\:items-baseline {
@@ -1322,28 +1501,16 @@ video {
     gap: 1.5rem;
   }
 
-  .md\:space-x-4 > :not([hidden]) ~ :not([hidden]) {
+  .md\:space-x-8 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-x-reverse: 0;
-    margin-right: calc(1rem * var(--tw-space-x-reverse));
-    margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+    margin-right: calc(2rem * var(--tw-space-x-reverse));
+    margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .md\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-y-reverse: 0;
     margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
     margin-bottom: calc(0px * var(--tw-space-y-reverse));
-  }
-
-  .md\:space-x-6 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(1.5rem * var(--tw-space-x-reverse));
-    margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .md\:space-x-8 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(2rem * var(--tw-space-x-reverse));
-    margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .md\:border-l-2 {
@@ -1380,6 +1547,10 @@ video {
 
   .lg\:hidden {
     display: none;
+  }
+
+  .lg\:w-\[350px\] {
+    width: 350px;
   }
 
   .lg\:px-8 {
