--- a/css/main.css
+++ b/css/main.css
@@ -1250,6 +1250,26 @@ video {
   padding-top: 7rem;
 }
 
+.pt-\[6\] {
+  padding-top: 6;
+}
+
+.pt-\[28\] {
+  padding-top: 28;
+}
+
+.pt-\[28px\] {
+  padding-top: 28px;
+}
+
+.pt-\[26px\] {
+  padding-top: 26px;
+}
+
+.pt-\[8\] {
+  padding-top: 8;
+}
+
 .text-center {
   text-align: center;
 }
@@ -1584,6 +1604,26 @@ video {
     margin-top: 4rem;
   }
 
+  .lg\:mt-\[1\] {
+    margin-top: 1;
+  }
+
+  .lg\:mt-\[59\] {
+    margin-top: 59;
+  }
+
+  .lg\:mt-\[59px\] {
+    margin-top: 59px;
+  }
+
+  .lg\:mt-\[60px\] {
+    margin-top: 60px;
+  }
+
+  .lg\:mt-\[58px\] {
+    margin-top: 58px;
+  }
+
   .lg\:block {
     display: block;
   }
@@ -1675,6 +1715,18 @@ video {
 
   .lg\:pt-14 {
     padding-top: 3.5rem;
+  }
+
+  .lg\:pt-12 {
+    padding-top: 3rem;
+  }
+
+  .lg\:pt-1 {
+    padding-top: 0.25rem;
+  }
+
+  .lg\:pt-10 {
+    padding-top: 2.5rem;
   }
 }
 
